--- a/exam/machine_test/templates/exam/todolist.html
+++ b/exam/machine_test/templates/exam/todolist.html
@@ -99,13 +99,13 @@
         </head>
         <body>
         
-        <div id="myDIV" class="header">
+        <div id="div1" class="header">
           <h2 class="h2">My To Do List</h2>
-          <input type="text" id="myInput" placeholder="Create Event">
+          <input type="text" id="title" placeholder="Create Event">
           <span class="span" onclick="newElement()">Add</span>
         </div>
         
-        <ul id="myUL">
+        <ul id="ul1">
           <li>class start @ 9:30</li>
           <li>Machine test started @11:30</li>
         </ul>
@@ -138,15 +138,15 @@
 
         function newElement() {
           var li = document.createElement("li");
-          var inputValue = document.getElementById("myInput").value;
+          var inputValue = document.getElementById("title").value;
           var t = document.createTextNode(inputValue);
           li.appendChild(t);
           if (inputValue === '') {
             alert("pease enter any event")
           } else {
-            document.getElementById("myUL").appendChild(li);
+            document.getElementById("ul1").appendChild(li);
           }
-          document.getElementById("myInput").value = "";
+          document.getElementById("title").value = "";
         
           var span = document.createElement("SPAN");
           var txt = document.createTextNode("\u00D7");
